--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   padding: .5em;
-  background-color: rgb(61, 71, 75);
+  background-color: rgb(69, 80, 83);
   color: beige;
 }
 
@@ -62,6 +62,7 @@ body {
   border-radius: .3em;
   margin: .5em .3em;
   font-size: .7rem;
+  cursor: pointer;
 }
 
 .nav button:hover {
@@ -78,6 +79,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(27%, 1fr));
   gap: 1em;
+  justify-items: center;
 }
 
 .img {
@@ -88,6 +90,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
 }
 
 .card h4, p {
